--- a/demo/src/main/resources/templates/fileList.html
+++ b/demo/src/main/resources/templates/fileList.html
@@ -303,7 +303,7 @@
     function viewPDF(id, display) {
         console.log('Display:', display)
         if (display == null) {
-            window.location.href = `pdf.html?fileId=${encodeURIComponent(id)}`;
+            window.location.href = `/pdf?fileId=${encodeURIComponent(id)}`;
         } else {
             fetch(`http://${API_BASE_URL}/downloadfiles/${encodeURIComponent(id)}`, { responseType: 'blob' })
                 .then(response => {
