--- a/demo/src/main/resources/templates/adminHome.html
+++ b/demo/src/main/resources/templates/adminHome.html
@@ -51,7 +51,7 @@
 <body>
 <div class="navbar">
     <a href="/resourcesLib">Source Databases</a>
-    <a href="#users">Users</a>
+    <a href="/adminBorrow">Borrows</a>
     <a href="#settings">Settings</a>
     <a href="#logout">Logout</a>
 </div>
